# jarvisto

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake  ProjectPackaging.cmake
cmake/modules/: AddBoost.cmake  AddDate.cmake  AddDlt.cmake  AddMosquitto.cmake  AddNlohmann.cmake  AddOpenSsl.cmake  AddSystemd.cmake  BuildLocation.cmake  Findmosquitto.cmake
config/: CMakeLists.txt
config/cmake/: JarvisCommonConfig.cmake.in  JarvistoConfig.cmake.in
config/generators/: debFormat.cmake
config/options/: CMakeLists.txt  Options.hpp.in
config/package/: CMakeLists.txt  JarvistoConfig.cmake.in
doc/: common.md  intro.md
include/jarvis/: Application.hpp  AsyncResult.hpp  Cancellable.hpp  DateTime.hpp  Formatters.hpp  HttpRequest.hpp  IWorker.hpp  LoggerInitializer.hpp  Network.hpp  SecureContext.hpp  Subsystem.hpp  Timestamp.hpp  Utils.hpp  Worker.hpp  WorkerGroup.hpp
include/jarvisto/: Application.hpp  Asio.hpp  AvailabilityObserver.hpp  AvailabilityPublisher.hpp  AvailabilitySubject.hpp  Cancellable.hpp  DateTime.hpp  Formatters.hpp  Http.hpp  HttpRequest.hpp  IAvailabilitySubject.hpp  IMqttClient.hpp  IWorker.hpp  Logger.hpp  LoggerInitializer.hpp  Mqtt.hpp  MqttAsyncClient.hpp  MqttBasicClient.hpp  MqttClient.hpp  Network.hpp  SecureContext.hpp  Subsystem.hpp  Timestamp.hpp  Types.hpp  Utils.hpp  Worker.hpp  WorkerGroup.hpp
include/jarvisto/core/: Application.hpp  LoggerFactory.hpp  LoggerInitializer.hpp  SignalHandler.hpp
include/jarvisto/network/: AsyncResult.hpp  AvailabilitySubject.hpp  Formatters.hpp  Http.hpp  IAvailabilitySubject.hpp  IMqttClient.hpp  IWorker.hpp  Mqtt.hpp  MqttAsyncClient.hpp  MqttBasicClient.hpp  MqttClient.hpp  Worker.hpp  WorkerGroup.hpp
scripts/: run-build-env.sh  run-test-env.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/jarvisto/core/: Application.hpp  Config.hpp  DateTime.hpp  Environment.hpp  Logger.hpp  LoggerFactory.hpp  SignalHandler.hpp  Subsystem.hpp  Timestamp.hpp
src/core/src/: Application.cpp  Config.cpp  DateTime.cpp  Environment.cpp  LoggerFactory.cpp  LoggerInitializer.cpp  SignalHandler.cpp  Subsystem.cpp  Timestamp.cpp
src/core/test/: CMakeLists.txt
src/core/test/src/: ConfigTest.cpp  DateTimeTest.cpp  LoggerFactoryTest.cpp
src/include/common/: LoggerDltSink.hpp
src/network/: CMakeLists.txt
src/network/include/jarvisto/network/: Asio.hpp  AsyncResult.hpp  AvailabilityObserver.hpp  AvailabilityPublisher.hpp  AvailabilitySubject.hpp  Cancellable.hpp  Formatters.hpp  Http.hpp  HttpRequest.hpp  IAvailabilitySubject.hpp  IWorker.hpp  Mqtt.hpp  MqttAsyncClient.hpp  MqttClient.hpp  SecureContext.hpp  Types.hpp  Worker.hpp  WorkerGroup.hpp
src/network/src/: AvailabilityObserver.cpp  AvailabilityPublisher.cpp  AvailabilitySubject.cpp  Cancellable.cpp  Http.cpp  HttpRequest.cpp  Mqtt.cpp  MqttBasicClient.cpp  MqttClient.cpp  SecureContext.cpp  Worker.cpp  WorkerGroup.cpp
src/network/test/: CMakeLists.txt
src/network/test/include/network/: MockAvailabilitySubject.hpp  MockMqttClient.hpp
src/network/test/src/: AsyncResultTest.cpp  AvailabilityObserverTest.cpp  AvailabilityPublisherTest.cpp  HttpRequestTest.cpp  MockAvailabilitySubject.cpp  MockMqttClient.cpp  MqttAsyncClientTest.cpp  WorkerGroupTest.cpp  WorkerTest.cpp
src/src/: Application.cpp  AvailabilityObserver.cpp  AvailabilityPublisher.cpp  AvailabilitySubject.cpp  Cancellable.cpp  DateTime.cpp  Http.cpp  HttpRequest.cpp  LoggerDltSink.cpp  LoggerInitializer.cpp  Mqtt.cpp  MqttBasicClient.cpp  MqttClient.cpp  Network.cpp  SecureContext.cpp  Subsystem.cpp  Timestamp.cpp  Utils.cpp  Worker.cpp  WorkerGroup.cpp
test/common/: CMakeLists.txt
test/common/include/test/: MockAvailabilitySubject.hpp  MockMqttClient.hpp  Waiter.hpp
test/common/src/: MockAvailabilitySubject.cpp  MockMqttClient.cpp  TestMain.cpp
test/unit/: CMakeLists.txt
test/unit/src/: AsyncResultTest.cpp  AvailabilityObserverTest.cpp  AvailabilityPublisherTest.cpp  DateTimeTest.cpp  HttpRequestTest.cpp  MqttAsyncClientTest.cpp  UtilsTest.cpp  WorkerGroupTest.cpp  WorkerTest.cpp
tools/: CMakeLists.txt
tools/ada-url/: CMakeLists.txt
tools/cli/: CMakeLists.txt
tools/test/: CMakeLists.txt
tools/test/include/test/: Waiter.hpp
